修改名称信息

--- a/scripts/components/road/tpls/attr_tollgate_tpl/tollGateTpl.html
+++ b/scripts/components/road/tpls/attr_tollgate_tpl/tollGateTpl.html
@@ -68,20 +68,57 @@
                         <a ng-click="addItem('name')" class="fm-cursor">名称（共 {{nameGroup.length}} 组）</a>
                     </div>
                     <div class="list-add-icon" ng-click="addItem('name');">
-                      <i class="glyphicon glyphicon-plus-sign"></i>
+                        <i class="glyphicon glyphicon-plus-sign"></i>
                     </div>
                     <div class="list-line"></div>
                 </li>
                 <li class="list-group-item">
-                  <ul ng-repeat="namesItem in nameGroup | orderBy:'nameGrouppid'" class="list-group child-list-ul list-group-lg m-b-none">
-                    <li class="list-group-item" ng-repeat="item in namesItem | orderBy:'nameId'">
-                      <label class="control-label fm-cursor" ng-click="showDetail('name',$index ,namesItem,item.nameGroupid);" ng-bind="item.name"></label>
-                      <i class="glyphicon glyphicon-remove-circle" ng-click="removeItem($index,'name',item)"></i>
-                    </li>
-                  </ul>
+                    <ul ng-repeat="namesItem in nameGroup | orderBy:'nameGrouppid'" class="list-group child-list-ul list-group-lg m-b-none">
+                        <li class="list-group-item" ng-repeat="item in namesItem | orderBy:'nameId'">
+                            <label class="control-label fm-cursor" ng-click="showDetail('name',$index ,namesItem,item.nameGroupid);" ng-bind="item.name"></label>
+                            <i class="glyphicon glyphicon-remove-circle" ng-click="removeItem($index,'name',item)"></i>
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </div>
+        <!--<div class="content">
+            <ul class="list-group list-group-lg m-b-none">
+                <li class="list-group-item">
+                    <div class="list-name">
+                        <a ng-click="addItem('name')" class="fm-cursor">名称（共 {{nameGroup.length}} 组）</a>
+                    </div>
+                    <div class="list-add-icon" ng-click="addItem('name');">
+                        <i class="glyphicon glyphicon-plus-sign"></i>
+                    </div>
+                    <div class="list-line"></div>
+                </li>
+                <li class="list-group-item col-md-12" style="padding: 5px;">
+                    <div ng-repeat="namesItem in nameGroup | orderBy:'nameGrouppid'" class="list-group child-list-ul list-group-lg m-b-none col-md-12" style="margin: 1px;">
+                        <div class="col-md-12">
+                            <div class="col-md-2 text-center">名称组</div>
+                            <div class="col-md-2 text-center">
+                                <input type="text" class="full-width chosen-disabled" ng-model="namesItem[0].nameGroupid" disabled>
+                            </div>
+                            <div class="col-md-3 text-center">名称组号</div>
+                            <div class="col-md-3 text-center">
+                                <input type="text" class="full-width chosen-disabled" ng-model="namesItem[0].nameId" disabled>
+                            </div>
+                            <div class="col-md-2 text-center">
+                                <span class="glyphicon glyphicon-plus-sign name-icon" ng-click="addItemName(namesItem[0].nameGroupid);" title="增加名称"></span>
+                                <span class="glyphicon glyphicon-remove-sign name-icon" ng-click="deleteItemName(namesItem[0].nameGroupid);" title="删除名称组"></span>
+                            </div>
+                        </div>
+                        <div class="col-md-12" ng-repeat="item in namesItem track by $index">
+                            <div class="col-md-10 name-title fm-cursor">{{item.name}}({{item.nameGroupid}})</div>
+                            <div class="col-md-2 text-center">
+                                <span class="glyphicon glyphicon-remove-sign name-icon" ng-click="removeItem($index,'name',item)" title="删除名称"></span>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>-->
         <div class="content">
             <ul class="list-group list-group-lg m-b-none">
                 <li class="list-group-item">
