--- a/less/editor.less
+++ b/less/editor.less
@@ -2788,3 +2788,17 @@ input[type="range"]::-webkit-slider-thumb {
   color:#fff;
   cursor:pointer;
 }
+
+/* 名称信息相关 */
+.no-margin {
+  margin:0;
+}
+
+.name-icon{
+  cursor: pointer;
+  font-size: 15px;
+}
+
+.name-title{
+  padding-left: 5px;
+}
