--- a/styles/imeep/editor.css
+++ b/styles/imeep/editor.css
@@ -2772,3 +2772,14 @@ a.batchButton {
   color: #fff;
   cursor: pointer;
 }
+/* 名称信息相关 */
+.no-margin {
+  margin: 0;
+}
+.name-icon {
+  cursor: pointer;
+  font-size: 15px;
+}
+.name-title {
+  padding-left: 5px;
+}
