完成平滑修行，部分完成批量操作面板

--- a/scripts/components/road/tpls/attr_link_tpl/rdLinkTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/rdLinkTpl.html
@@ -26,6 +26,15 @@
         <span ng-if="brigeLinkArrays!=null" ng-class="{'active':$index==brigeIndex,'btn btn-primary btn-xs':true}" ng-repeat="item in brigeLinkArrays"  >
         <label class="brige-line" ng-click="changeLink($index,item.id)">{{item.id}}</label>
         </span>
+        <!--<div>道路线</div>-->
+        <!--<div>-->
+            <!--<ul>-->
+                <!--<li>1</li>-->
+                <!--<li>2</li>-->
+                <!--<li>3</li>-->
+
+            <!--</ul>-->
+        <!--</div>-->
     </div>
     <div class="content scroll-styled dark" style="height:90%;">
         <div id="fm-link-tabControl" class="btn-group" role="group" style="margin-bottom:5px;">
