--- a/styles/imeep/editor.css
+++ b/styles/imeep/editor.css
@@ -780,6 +780,15 @@ a.fm-panel-controlArrowRight > span {
   -moz-box-shadow: 0 1px 0 #333 inset;
   background-image: linear-gradient(#333 100%, #333 100%);
 }
+
+.chosen-container-multi ul.chosen-choices {
+  background-image:url('');
+  background-color: #333;
+}
+
+.chosen-container-multi .chosen-choices li.search-field{
+  background-color: #333;
+}
 .tel-empty {
   border: solid #ff8888 1px !important;
 }
