充电站修改

--- a/less/editor.less
+++ b/less/editor.less
@@ -821,6 +821,17 @@ a.fm-panel-controlArrowLeft > span, a.fm-panel-controlArrowRight > span {
   .global-box-shadow(0 1px 0 @dark-brown inset);
   background-image: linear-gradient(@dark-brown 100%, @dark-brown 100%);
 }
+.chosen-container-multi {
+  width: 170px !important;
+  ul.chosen-choices {
+    background-image:url('');
+    background-color: #333;
+    li.search-field{
+      background-color: #333;
+    }
+  };
+}
+
 .tel-empty {
   border: solid #ff8888 1px !important;
 }
