--- a/scripts/components/poi/tpls/attr-deep/chargingStationTpl.html
+++ b/scripts/components/poi/tpls/attr-deep/chargingStationTpl.html
@@ -14,16 +14,10 @@
                     <li ng-if="poi.chargingstations[0].chargingType == 2 || poi.chargingstations[0].chargingType == 4">
                         <label>换电车品牌</label>
                         <div>
-                            <!--<select fm-edit-view class="fm-control" ng-model="poi.chargingstations[0].changeBrands"-->
-                                    <!--no_results_text="'&#45;&#45;无&#45;&#45;'" placeholder_text_single="'&#45;&#45;请选择&#45;&#45;'"-->
-                                    <!--ng-options="value as lable.chainName for (value, lable) in chainList"-->
-                                    <!--chosen multiple ng-disabled="isSpecialOperation">-->
-                            <!--</select>-->
-
                             <select fm-edit-view class="fm-control" ng-model="poi.chargingstations[0].changeBrands"
-                                    no_results_text="'--无--'"  placeholder_text_single="'--请选择--'" search_contains=true
+                                    no_results_text="'--无--'" default_multiple_text="'--请选择--'" search_contains=true
                                     ng-options="value as lable.chainName for (value, lable) in chainList"
-                                    chosen multiple ng-disabled="isSpecialOperation">
+                                    chosen multiple ng-disabled="isSpecialOperation" style="width: 170px !important;">
                                 <option></option>
                             </select>
                         </div>
