--- a/scripts/components/road/tpls/attr_tollgate_tpl/tollGateNameTpl.html
+++ b/scripts/components/road/tpls/attr_tollgate_tpl/tollGateNameTpl.html
@@ -3,7 +3,7 @@
         <div class="add-icon" ng-click="addNameInfo();">
           <i class="glyphicon glyphicon-plus-sign"></i>
         </div>
-        <div class="content" ng-repeat="info in tollGateNames | orderBy: 'info.langCode'">
+        <div class="content" ng-repeat="info in tollGateNames track by $index">
             <form>
                 <ul class="fm-ul fm-ul-form">
                     <li>
