充电桩开发，联调

--- a/less/editor.less
+++ b/less/editor.less
@@ -831,7 +831,9 @@ a.fm-panel-controlArrowLeft > span, a.fm-panel-controlArrowRight > span {
     }
   };
 }
-
+.selectChain .chosen-container-single{
+  width: 170px !important;
+}
 .tel-empty {
   border: solid #ff8888 1px !important;
 }
