--- a/scripts/components/poi/tpls/attr-deep/chargingStationTpl.html
+++ b/scripts/components/poi/tpls/attr-deep/chargingStationTpl.html
@@ -50,13 +50,13 @@
                     <li>
                         <label>备注</label>
                         <div>
-                            <input fm-edit-view class="fm-control" ng-model="poi.chargingstations[0].memo">
+                            <input fm-edit-view type="text" class="fm-control" ng-model="poi.chargingstations[0].memo">
                         </div>
                     </li>
                     <li>
                         <label>开放时间</label>
                         <div>
-                            <input fm-edit-view class="fm-control" ng-model="poi.chargingstations[0].openHour" >
+                            <input fm-edit-view type="text" class="fm-control" ng-model="poi.chargingstations[0].openHour" >
                         </div>
                     </li>
                     <li>
@@ -75,7 +75,7 @@
                     <li>
                         <label>收费备注</label>
                         <div>
-                            <input fm-edit-view class="fm-control" ng-model="poi.chargingstations[0].parkingInfo" >
+                            <input fm-edit-view type="text" class="fm-control" ng-model="poi.chargingstations[0].parkingInfo" >
                         </div>
                     </li>
                     <li>
