--- a/scripts/components/road/tpls/attr_lu_tpl/luFaceTpl.html
+++ b/scripts/components/road/tpls/attr_lu_tpl/luFaceTpl.html
@@ -52,7 +52,7 @@
                         </li>
                         <li class="list-group-item">
                             <ul ng-repeat="namesItem in nameGroup | orderBy:'nameGrouppid'" class="list-group child-list-ul list-group-lg m-b-none">
-                                <li class="list-group-item" ng-repeat="item in namesItem  | orderBy:'pid'">
+                                <li class="list-group-item" ng-repeat="item in namesItem track by $index">
                                     <label class="control-label fm-cursor" ng-click="showDetail($parent.$index ,namesItem,item.nameGroupid);" ng-bind="item.name"></label>
                                     <i class="glyphicon glyphicon-remove-circle" ng-click="removeItem($index,item)"></i>
                                 </li>
