--- a/scripts/components/road/tpls/attr_lu_tpl/luFaceNameTpl.html
+++ b/scripts/components/road/tpls/attr_lu_tpl/luFaceNameTpl.html
@@ -3,7 +3,7 @@
         <div class="add-icon" ng-click="addNameInfo();">
           <i class="glyphicon glyphicon-plus-sign"></i>
         </div>
-        <div class="content" ng-repeat="info in luFaceNames | orderBy: 'pid'">
+        <div class="content" ng-repeat="info in luFaceNames track by $index">
             <form>
                 <ul class="fm-ul fm-ul-form">
                     <li>
@@ -21,8 +21,11 @@
                     <li>
                         <label>代码语言</label>
                         <div>
-                            <select ng-model="info.langCode" class="fm-control"
+                            <!--<select ng-model="info.langCode" class="fm-control"
                                     ng-options="value.id as value.label for value in langCodeOptions | langCodeFilter: selectedLangcodeArr: info.langCode" ng-change="langCodeChange($event, this)">
+                            </select>-->
+                            <select ng-model="info.langCode" class="fm-control" ng-click="langCodeChange(info.langCode);">
+                                <option value="{{value.id}}" ng-repeat="value in langCodeOptions" ng-selected="info.langCode == value.id" ng-disabled="selectedLangcodeArr.indexOf(value.id) > -1"> {{value.label}}</option>
                             </select>
                         </div>
                     </li>
