--- a/scripts/components/poi/tpls/attr-deep/chargingPlotTpl.html
+++ b/scripts/components/poi/tpls/attr-deep/chargingPlotTpl.html
@@ -24,7 +24,7 @@
                     </li>
                     <li>
                         <label>同组桩数</label>
-                        <div><input fm-edit-view type="text" class="fm-control" ng-model="charging.count"/></div>
+                        <div><input fm-edit-view type="text" disabled class="fm-control chosen-disabled" ng-model="charging.count"/></div>
                     </li>
                     <li>
                         <label>电流类型</label>
