--- a/apps/newImeep/editor/templates/poiRightPanelTemp.html
+++ b/apps/newImeep/editor/templates/poiRightPanelTemp.html
@@ -1,4 +1,20 @@
 <!--右侧属性编辑面板-->
+<style>
+    .pay_list_c1 {
+        cursor: pointer;
+        text-align: center;
+        margin-right: 10px;
+        background-image: url(../../../../images/png/button-click.png);
+        background-repeat: no-repeat;
+    }
+    .radioclass {
+        opacity: 0;
+        cursor: pointer;
+    }
+    .on {
+        background-position: 0;
+    }
+</style>
 <div style="height:100%;background-color:#f0f0f0" ng-controller="poiRightPanelCtrl">
     <div style="width: 100%;height: 80px;background-color: white;line-height: 80px">
         <div class="right-property-right" ng-click="closeRightPanel()">
@@ -105,15 +121,15 @@
                         等级
                     </div>
                     <div style="display: inline-block">
-                        <div class="radio" style="display: inline-block">
-                            <label>
-                                <input type="radio" name="optionsRadios" value="option1" checked>选项1
-                            </label>
+                        <div style="display: inline-block">
+                            <div class="pay_list_c1 on">
+                                <input type="radio" name="optionsRadios" value="option1" checked class="radioclass">选项1
+                            </div>
                         </div>
-                        <div class="radio" style="display: inline-block">
-                            <label>
-                                <input type="radio" name="optionsRadios" value="option2">选项2
-                            </label>
+                        <div style="display: inline-block">
+                            <div class="pay_list_c1 on">
+                                <input type="radio" name="optionsRadios" value="option2" class="radioclass">选项2
+                            </div>
                         </div>
                     </div>
                 </li>
